bridge/base/0-ubersystem-namespace.yaml
#! 0-ubersystem-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: ubersystem
    labels:
        com.docker.compose.project: ubersystem
