bridge/base/driver-service-deployment.yaml
#! driver-service-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: driver-service
    namespace: ubersystem
    labels:
        com.docker.compose.project: ubersystem
        com.docker.compose.service: driver-service
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: ubersystem
            com.docker.compose.service: driver-service
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: ubersystem
                com.docker.compose.service: driver-service
                com.docker.compose.network.uber-net: "true"
        spec:
            containers:
                - name: driver-service
                  image: ubersystem-driver-service
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: driver-ser-8081
                      containerPort: 8081
                    - name: driver-ser-8080
                      containerPort: 8080
