bridge/base/driver-service-expose.yaml
#! driver-service-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: driver-service
    namespace: ubersystem
    labels:
        com.docker.compose.project: ubersystem
        com.docker.compose.service: driver-service
spec:
    selector:
        com.docker.compose.project: ubersystem
        com.docker.compose.service: driver-service
    ports:
        - name: driver-ser-8081
          port: 8081
          targetPort: driver-ser-8081
        - name: driver-ser-8080
          port: 8080
          targetPort: driver-ser-8080
