bridge/base/driver-service-service.yaml
# check if there is at least one published port

#! driver-service-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: driver-service-published
    namespace: ubersystem
    labels:
        com.docker.compose.project: ubersystem
        com.docker.compose.service: driver-service
spec:
    selector:
        com.docker.compose.project: ubersystem
        com.docker.compose.service: driver-service
    ports:
        - name: driver-ser-8082
          port: 8082
          protocol: TCP
          targetPort: driver-ser-8080

# check if there is at least one published port
