bridge/base/uber-net-network-policy.yaml
#! uber-net-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: uber-net-network-policy
    namespace: ubersystem
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.uber-net: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.uber-net: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.uber-net: "true"
